# prosjektoppgave

./: .gitignore
osp_simulator/cpp_fmus/: CMakeLists.txt  README.md  conanfile.txt
osp_simulator/cpp_fmus/cmake/: fmu-tools.cmake
osp_simulator/cpp_fmus/cppfmu/: cppfmu_cs.hpp
osp_simulator/cpp_fmus/src/controllers/heading_controller/: CMakeLists.txt  heading_controller_fmu.cpp  heading_controller_fmu.hpp  modelDescription.xml
osp_simulator/cpp_fmus/src/controllers/maneuvering_test_controller/: CMakeLists.txt  maneuvering_test_controller_fmu.cpp  maneuvering_test_controller_fmu.hpp  modelDescription.xml
osp_simulator/cpp_fmus/src/controllers/pid_controller/: pid_controller.cpp  pid_controller.hpp
osp_simulator/cpp_fmus/src/controllers/set_points_client/: CMakeLists.txt  modelDescription.xml  set_points_client.cpp  set_points_client.hpp  set_points_client_fmu.cpp  set_points_client_fmu.hpp
osp_simulator/cpp_fmus/src/controllers/speed_controller/: CMakeLists.txt  modelDescription.xml  speed_controller_fmu.cpp  speed_controller_fmu.hpp
osp_simulator/cpp_fmus/src/fmi_advanced_navigation/: CMakeLists.txt  fmi_advanced_navigation.cpp  modelDescription.xml
osp_simulator/cpp_fmus/src/fmi_advanced_navigation/adnav_lib/: an_packet_protocol.c  an_packet_protocol.h  anpp_encode_decode.c  anpp_encode_decode.h
osp_simulator/cpp_fmus/src/fmi_dp_interface/: CMakeLists.txt  dp_interface.cpp  dp_interface.hpp  fmi_dp_interface.cpp  modelDescription.xml
osp_simulator/cpp_fmus/src/fmi_dp_mock/: CMakeLists.txt  data_types.hpp  dynamic_positioning.cpp  dynamic_positioning.hpp  fmi_dp_mock.cpp  fmi_dp_mock.hpp  modelDescription.xml
osp_simulator/cpp_fmus/src/fmi_dp_mock/models/: models.cpp  models.hpp
osp_simulator/cpp_fmus/src/fmi_hatch_control/: CMakeLists.txt  hatch_control.cpp  hatch_control.hpp
osp_simulator/cpp_fmus/src/fmi_hatch_control/modbus_tcp_protocol/: CMakeLists.txt  fmi_hatch_control.cpp  hatch_control_handler.cpp  hatch_control_handler.hpp  modelDescription.xml
osp_simulator/cpp_fmus/src/fmi_hatch_control/nmea_protocol/: CMakeLists.txt  fmi_hatch_control.cpp  hatch_control_handler.cpp  hatch_control_handler.hpp  modelDescription.xml
osp_simulator/cpp_fmus/src/fmi_mt_driver/: CMakeLists.txt  fmi_mt_driver.cpp  modelDescription.xml
osp_simulator/cpp_fmus/src/fmi_propulsion_drivers/: CMakeLists.txt
osp_simulator/cpp_fmus/src/fmi_propulsion_drivers/cstrider/: CMakeLists.txt  cstrider_spec_utilities.hpp  fmi_cstrider_propulsion_driver.cpp  fmi_cstrider_propulsion_driver.hpp  modelDescription.xml  model_signals.hpp
osp_simulator/cpp_fmus/src/fmi_propulsion_drivers/zpa/: CMakeLists.txt  fmi_zpa_propulsion_driver.cpp  fmi_zpa_propulsion_driver.hpp  modelDescription.xml  model_signals.hpp  zpa_spec_utilities.hpp
osp_simulator/cpp_fmus/src/fmi_traffic_sim/: CMakeLists.txt  fmi_traffic_sim.cpp  modelDescription.xml  traffic_sim_lib_wrapper.cpp  traffic_sim_lib_wrapper.hpp
osp_simulator/cpp_fmus/src/fmi_ultrasonic_distance_sensor_communication/: CMakeLists.txt  fmi_ultrasonic_distance_sensor_communication.cpp  modelDescription.xml
osp_simulator/cpp_fmus/src/fmi_ultrasonic_distance_sensor_communication_zb1/: CMakeLists.txt  fmi_ultrasonic_distance_sensor_communication_zb1.cpp  modelDescription.xml
osp_simulator/cpp_fmus/src/fmi_zb_sim_clock/: CMakeLists.txt  fmi_zb_sim_clock.cpp  modelDescription.xml
osp_simulator/cpp_fmus/src/fmi_zb_sim_nav/: CMakeLists.txt  fmi_zb_sim_nav.cpp  modelDescription.xml
osp_simulator/cpp_fmus/src/hydrodynamic_models/actuators/fmi_azimuth_thruster/: CMakeLists.txt  azimuth_thruster_OspModelDescription.xml  modelDescription.xml
osp_simulator/cpp_fmus/src/hydrodynamic_models/actuators/fmi_main_skrew/: CMakeLists.txt  modelDescription.xml
osp_simulator/cpp_fmus/src/hydrodynamic_models/actuators/fmi_rudder/: CMakeLists.txt  modelDescription.xml
osp_simulator/cpp_fmus/src/hydrodynamic_models/actuators/fmi_simple_thruster/: CMakeLists.txt  modelDescription.xml
osp_simulator/cpp_fmus/src/hydrodynamic_models/actuators/include/: hull_interaction.hpp  jet_stream_model.hpp  open_water_propeller_characteristics.hpp  propeller_base.hpp  rudder_base.hpp  wake_model.hpp
osp_simulator/cpp_fmus/src/hydrodynamic_models/actuators/src/: hull_interaction.cpp  jet_stream_model.cpp  propeller_base.cpp  rudder_base.cpp  wake_model.cpp
osp_simulator/cpp_fmus/src/hydrodynamic_models/hull_maneuvering/: CMakeLists.txt  modelDescription.xml
osp_simulator/cpp_fmus/src/hydrodynamic_models/hull_maneuvering/include/: hull_maneuvering.hpp  (+1 more)
osp_simulator/cpp_fmus/src/hydrodynamic_models/hull_seakeeping/: CMakeLists.txt  hull_seakeeping_OspModelDescription.xml  modelDescription.xml
osp_simulator/cpp_fmus/src/hydrodynamic_models/planing_hull_maneuvering/: CMakeLists.txt  modelDescription.xml
osp_simulator/cpp_fmus/src/hydrodynamic_models/rigid_body_maneuvering/: CMakeLists.txt  modelDescription.xml
osp_simulator/cpp_fmus/src/physical_components/electric_drive/: CMakeLists.txt  modelDescription.xml
osp_simulator/cpp_fmus/src/physical_components/mooring/: CMakeLists.txt  modelDescription.xml  mooring_OspModelDescription.xml
osp_simulator/cpp_fmus/src/physical_components/steering_machinery/: CMakeLists.txt  modelDescription.xml
osp_simulator/cpp_fmus/src/physics_fmu_base_class/: physics_fmu_base_class.cpp  physics_fmu_base_class.hpp
osp_simulator/cpp_fmus/test/: CMakeLists.txt
osp_simulator/cpp_fmus/test/fmi_advanced_navigation/: adnav_tests.cpp
osp_simulator/cpp_fmus/test/fmi_dp_mock/: dp_controller_unit_tests.cpp  dynamic_models_unit_tests.cpp  fmu_dp_mock_unit_tests.cpp
osp_simulator/cpp_fmus/test/fmi_hatch_control/: modbus_tcp_hatch_control_tests.cpp  nmea_hatch_control_tests.cpp
osp_simulator/cpp_fmus/test/fmi_propulsion_tests/: cstrider_propulsion_driver_tests.cpp  zpa_propulsion_driver_tests.cpp
osp_simulator/cpp_fmus/test/hydrodynamic_models/hull_maneuvering/: hull_maneuvering_tests.cpp
osp_simulator/cpp_fmus/test/hydrodynamic_models/planing_hull_maneuvering/: planing_hull_maneuvering_tests.cpp
ronja_kode/: LICENSE  (+2 more)
(+318 files in other folders)
